# try_leptos

./: .env.sample  .gitignore  Cargo.toml  Makefile.toml  README.md  gen.sh  index.html  run.sh
api_mock/: .gitignore  README.md  bun.lockb  index.ts
backjs/: bun.lockb  index.ts  package.json
datapack/: Cargo.toml
datapack/src/: lib.rs
front/: .gitignore  Cargo.toml  README.md  Trunk.toml  build-tailwind.sh  index.html  package.json  tailwind.config.js
front/src/: counter.rs  main.rs  todo_list.rs
front/src/components/: button_custom.rs  counter.rs  mod.rs  timer_label.rs  todo_list.rs
front/src/jslike/: time.rs
front/src/store/: mod.rs  todo_items.rs
webserver/: Cargo.toml
webserver/src/: main.rs
