[package]
name = "datapack"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
web-sys = "0.3.77"

[profile.release]
lto = "fat"              # リンク時の最適化を有効（ファイルをさらに小さく）
codegen-units = 1        # コード生成を1つのユニットで集中させる。処理速度向上
opt-level = "z"
