[package]
name = "try_leptos"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }
log = "0.4.27"
console_log = "1.0"
leptos-style = "0.2.0"
leptos_meta = "0.8.2"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
reactive_stores = "0.2.2"
serde_json = "1.0.140"
